--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
 	<meta charset="utf-8"/>
   <style type="text/css">
+  <link rel="stylesheet" href="http://alextighe.me/mobile.css" type="text/css" media="handheld" />
+
 html {
     /* the line height value of 1.9 is fixed for a line height multiple of 1.4 in the text view */
     font: normal 100.0%/1.9 serif;
