--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Atighe.GitHub.io by atighe</title>
+    <title>Alex&#39;s Site by atighe</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/github-light.css">
@@ -15,7 +15,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Atighe.GitHub.io</h1>
+        <h1>Alex&#39;s Site</h1>
         <p></p>
 
 
@@ -24,9 +24,7 @@
       </header>
       <section>
         <h1>
-<a id="hello-im-alex" class="anchor" href="#hello-im-alex" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello, I'm Alex</h1>
-
-<p>I engineer software and listen to music and read. Here are my parts of the Internet:</p>
+<a id="hello-im-alex-i-engineer-software-and-listen-to-music-and-read-here-are-my-parts-of-the-internet" class="anchor" href="#hello-im-alex-i-engineer-software-and-listen-to-music-and-read-here-are-my-parts-of-the-internet" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Hello, I'm Alex. I engineer software and listen to music and read. Here are my parts of the Internet:</h1>
 
 <p><a href="https://twitter.com/ohyoucare">Twitter</a> | <a href="https://github.com/atighe">GitHub</a> | <a href="https://www.instagram.com/ohyoucare">Instagram</a> | <a href="http://www.last.fm/user/thatwillhappen">Last.fm</a> | <a href="https://www.linkedin.com/in/atighe">LinkedIn</a></p>
       </section>
