Published with https://stackedit.io/

--- a/resume.html
+++ b/resume.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-  <title>resume</title>
+  <title>index</title>
 
 	<meta charset="utf-8"/>
   <style type="text/css">
@@ -359,63 +359,6 @@ figcaption {
         overflow: auto;
         position: relative;
     }
-}/* html elements */
-
-body {
-    background-color: #1a1a1a;
-    color: #bebebe;
-}
-a {
-    color: #308bd8;
-}
-hr {
-    color: #666;
-    background-color: #666;
-    -webkit-box-shadow: none;
-}
-pre {
-    background-color: #222;
-    border-color: #3c3c3c;
-}
-code {
-    background-color: #222;
-    border-color: #3c3c3c;
-}
-blockquote {
-    border-color: #333;
-    color: #999;
-}
-table {
-    border-color: #3c3c3c;
-}
-table th {
-    background-color: #222;
-    border-color: #3c3c3c;
-}
-table td {
-    border-color: #3c3c3c;
-}
-mark {
-    background: #bc990b;
-    color:#000;
-}
-
-/* unique elements */
-
-#wrapper::-webkit-scrollbar-thumb:vertical {
-    background-color: #525252;
-}
-#top-fader {
-    background: -webkit-gradient(linear, left top, left bottom, from(rgba(26,26,26,1)), to(rgba(26,26,26,0)));
-}
-#bottom-fader {
-    background: -webkit-gradient(linear, left bottom, left top, from(rgba(26,26,26,1)), to(rgba(26,26,26,0)));
-}
-
-/* custom formatting classes */
-
-.shadow {
-    -webkit-box-shadow: 0 2px 4px #000;
 }@media print {
 /* Printing support.
  * Override all printing colors to match the Light theme.
@@ -496,19 +439,27 @@ mark {
 <body>
   <div id="wrapper">
     <div id="content">
-<h1>Alex Tighe</h1>
+    <h1 id="alex-tighe">Alex Tighe</h1>
 
-<p><a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x61;&#x6c;&#101;&#x78;&#x2e;&#x74;&#x69;&#103;&#104;&#101;&#64;&#103;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x61;&#x6c;&#101;&#x78;&#x2e;&#116;&#105;&#103;&#x68;&#101;&#x40;&#x67;&#x6d;&#97;&#x69;&#108;&#x2e;&#x63;&#111;&#x6d;</a> | 508.326.4871 | <a href="http://alextighe.me">http://alextighe.me</a></p>
+<p><a href="mailto:alex.tighe@gmail.com">alex.tighe@gmail.com</a> | 508.326.4871 | <a href="http://alextighe.me">http://alextighe.me</a></p>
 
-<h3>Technologies</h3>
+
+
+<h3 id="technologies">Technologies</h3>
 
 <p>Java, Python, Coherence, Perl, SQL, Spring, vim, Unix</p>
 
-<h3>Professional Experience</h3>
 
-<h4>Associate, Galatea Associates</h4>
 
-<h5>Somerville, MA, 04.12 - Present</h5>
+<h3 id="professional-experience">Professional Experience</h3>
+
+
+
+<h4 id="associate-galatea-associates">Associate, Galatea Associates</h4>
+
+
+
+<h5 id="somerville-ma-0412-present">Somerville, MA, 04.12 - Present</h5>
 
 <ul>
 <li>Work on a global, real-time position-keeping application based on Java and Coherence, an in-memory distributed data grid</li>
@@ -516,9 +467,13 @@ mark {
 <li>Provide senior technical guidance for our global team, participate in architectural discussions and decisions, and act as a key technical advisor</li>
 </ul>
 
-<h4>Senior Software Engineer, Sigma Space Corporation</h4>
 
-<h5>Lanham, MD, 01.11 - 04.12</h5>
+
+<h4 id="senior-software-engineer-sigma-space-corporation">Senior Software Engineer, Sigma Space Corporation</h4>
+
+
+
+<h5 id="lanham-md-0111-0412">Lanham, MD, 01.11 - 04.12</h5>
 
 <ul>
 <li>Worked on all aspects of data production, archive, and distribution systems for NASA Earth imaging instruments, including development, maintenance, and testing</li>
@@ -529,9 +484,13 @@ mark {
 <li>Updated existing documentation and port it to more collaborative and user-friendly wiki pages</li>
 </ul>
 
-<h4>Programmer, McGovern Institute for Brain Research, MIT</h4>
 
-<h5>Cambridge, MA, 03.08 - 03.11</h5>
+
+<h4 id="programmer-mcgovern-institute-for-brain-research-mit">Programmer, McGovern Institute for Brain Research, MIT</h4>
+
+
+
+<h5 id="cambridge-ma-0308-0311">Cambridge, MA, 03.08 - 03.11</h5>
 
 <ul>
 <li>Designed and implemented applications (GUI and back-end) in MATLAB to control physical elements of rodent test chambers and integrate with electrophysiology recording hardware</li>
@@ -541,9 +500,13 @@ mark {
 <li>Built a database to help track and facilitate access to experimental recordings and analyses</li>
 </ul>
 
-<h4>Software Engineer, The MathWorks, Inc.</h4>
 
-<h5>Natick, MA, 10.06 - 02.08</h5>
+
+<h4 id="software-engineer-the-mathworks-inc">Software Engineer, The MathWorks, Inc.</h4>
+
+
+
+<h5 id="natick-ma-1006-0208">Natick, MA, 10.06 - 02.08</h5>
 
 <ul>
 <li>Developed new features in MATLAB and Simulink for the Aerospace Toolbox and Aerospace Blockset, including object-based animation methods and EGM96 gravity model functionality</li>
@@ -553,9 +516,13 @@ mark {
 <li>Worked with other development team members on design specifications, feature decisions, and code reviews</li>
 </ul>
 
-<h4>Application Support Engineer, The MathWorks, Inc.</h4>
 
-<h5>Natick, MA, 01.04 - 10.06</h5>
+
+<h4 id="application-support-engineer-the-mathworks-inc">Application Support Engineer, The MathWorks, Inc.</h4>
+
+
+
+<h5 id="natick-ma-0104-1006">Natick, MA, 01.04 - 10.06</h5>
 
 <ul>
 <li>Specialized in support of the Simulink control, simulation, and design automation products</li>
@@ -564,9 +531,13 @@ mark {
 <li>Acted as support member of xPC Target development team, handling user questions about hardware-in-the-loop simulation and real-time rapid control prototyping</li>
 </ul>
 
-<h4>Summer Intern, NLX Corporation</h4>
 
-<h5>Sterling, VA, 05.01 - 08.02</h5>
+
+<h4 id="summer-intern-nlx-corporation">Summer Intern, NLX Corporation</h4>
+
+
+
+<h5 id="sterling-va-0501-0802">Sterling, VA, 05.01 - 08.02</h5>
 
 <ul>
 <li>Aided flight software engineers in full-motion flight simulator development and testing in C under Linux</li>
@@ -574,7 +545,9 @@ mark {
 <li>Analyzed flight data for development of simulator aural and motion systems</li>
 </ul>
 
-<h3>Education</h3>
+
+
+<h3 id="education">Education</h3>
 
 <p>MS, Aerospace Engineering, Virginia Tech, December 2003 <br>
 BS, Aerospace Engineering, Minor in Mathematics, Virginia Tech, May 2002</p>
