--- a/index.html
+++ b/index.html
@@ -438,13 +438,11 @@ mark {
 </head>
 <body>
   <div id="wrapper">
-    <div id="content">
-    <h1 id="hello-im-alex">Hello, I’m Alex.</h1>
+<h1 id="hello-im-alex">Hello, I’m Alex.</h1>
 
 <p>I engineer software and listen to music and read. Here are my parts of the Internet:</p>
 
-<p><a href="https://twitter.com/ohyoucare">Twitter</a> | <a href="https://ohyoucare.wordpress.com">WordPress</a> | <a href="https://github.com/atighe">GitHub</a> | <a href="https://www.instagram.com/ohyoucare">Instagram</a> | <a href="http://www.last.fm/user/thatwillhappen">Last.fm</a> | <a href="https://www.linkedin.com/in/atighe">LinkedIn</a></p>
-    </div>
+<p><a href="https://twitter.com/ohyoucare">Twitter</a> | <a href="https://github.com/atighe">GitHub</a> | <a href="https://www.instagram.com/ohyoucare">Instagram</a> | <a href="http://www.last.fm/user/thatwillhappen">Last.fm</a> | <a href="https://www.linkedin.com/in/atighe">LinkedIn</a></p></div>
   </div> <!-- End wrapper -->
 </body>
 </html>
