Published with https://stackedit.io/

--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@ mark {
 </head>
 <body>
   <div id="wrapper">
+    <div id="content">
 <h1 id="hello-im-alex">Hello, I’m Alex.</h1>
 
 <p>I engineer software and listen to music and read. Here are my parts of the Internet:</p>
