--- a/index.html
+++ b/index.html
@@ -500,11 +500,11 @@ mark {
 
 <p>I engineer software and listen to music and read. Here are my parts of the Internet:</p>
 
-<p><a href="https://twitter.com/ohyoucare">Twitter</a>
-<a href="https://github.com/atighe">GitHub</a>
-<a href="https://www.instagram.com/ohyoucare">Instagram</a>
-<a href="http://www.last.fm/user/thatwillhappen">Last.fm</a>
-<a href="https://www.linkedin.com/in/atighe">LinkedIn</a>
+<p><a href="https://twitter.com/ohyoucare">Twitter</a> |
+<a href="https://github.com/atighe">GitHub</a> |
+<a href="https://www.instagram.com/ohyoucare">Instagram</a> |
+<a href="http://www.last.fm/user/thatwillhappen">Last.fm</a> |
+<a href="https://www.linkedin.com/in/atighe">LinkedIn</a> |
 <a href="http://alextighe.me/resume">Resume</a></p>
     </div>
   </div> <!-- End wrapper -->
