--- a/index.html
+++ b/index.html
@@ -496,6 +496,11 @@ mark {
 <body>
   <div id="wrapper">
     <div id="content">
+<pre><code class="html">&lt;head&gt;
+&lt;title&gt;Alex T.&lt;/title&gt;
+&lt;/head&gt;
+</code></pre>
+
 <h1>Hello, I&#8217;m Alex.</h1>
 
 <p>I engineer software and listen to music and read. Here are my parts of the Internet:</p>
