--- a/resume.html
+++ b/resume.html
@@ -2,17 +2,18 @@
 
 <html>
 <head>
-  <title>resume</title>
+  <meta charset="utf-8">
+  <title></title>
 
-	<meta charset="utf-8"/>
   <style type="text/css">
+/* +++ master +++ */
 html {
     /* the line height value of 1.9 is fixed for a line height multiple of 1.4 in the text view */
     font: normal 75.0%/1.9 serif;
 }
 
 body {
-    font-family: '.SF NS Text', Helvetica, Georgia, serif;
+    font-family: 'AvenirNext-Regular', Helvetica, Georgia, serif;
     word-wrap: break-word;
     margin: 0;
     padding: 0;
@@ -30,41 +31,15 @@ body {
  */
 
 #wrapper {
-    position: fixed;
-    width: 99.9%;
     height: 100%;
     overflow-y: scroll;
     overflow-x: hidden;
-    font-size: 1.0em;
-}
-
-#wrapper::-webkit-scrollbar {
-    width: 8px;
-    height: 10px;
-    -webkit-transition: all .45s ease-in;
-    position: relative;
-}
-#wrapper::-webkit-scrollbar-button:start:decrement, #wrapper::-webkit-scrollbar-button:end:increment {
-    height: 0px;
-    display: block;
-    background-color: transparent;
-}
-#wrapper::-webkit-scrollbar-track-piece {
-    background-color:
-    transparent;
-    -webkit-border-radius: 6px;
-}
-#wrapper::-webkit-scrollbar-thumb:vertical {
-    height: 50px;
-    background-color: #c8c8c8;
-    -webkit-border-radius: 6px;
-    -webkit-transition: all .45s ease-in;
+    width: 100%;
 }
 
 #content {
-    width: 610px;
-    margin: 0 auto 0 auto;
-    padding: 30px 0 30px 0;
+    width: auto;
+    padding: 8px 8px 8px 8px;
 }
 
 /**
@@ -72,12 +47,6 @@ body {
     Headings
  *
  */
-
-h1, h2, h3, h4, h5, h6 {
-    text-rendering: optimizeLegibility;
-    line-height: 1;
-    margin: 0.5rem 0;
-}
 
 h1, h2, h3, h4, h5, h6 {
     text-rendering: optimizeLegibility;
@@ -98,12 +67,12 @@ h6 { font-size: 0.85rem; }
 
 /**
  *
-	Paragraphs
+    Paragraphs
  *
  */
 
 p {
-	margin: 0 0 1.5em;
+    margin: 0 0 1.5em;
 }
 
 /**
@@ -122,13 +91,13 @@ blockquote {
 
 /**
  *
-	Code Blocks
+    Code Blocks
  *
  */
 
 pre code {
-	word-wrap: normal;
-	white-space: pre-wrap;
+    word-wrap: normal;
+    white-space: pre-wrap;
     border: none;
     padding: 0;
     background-color: transparent;
@@ -136,7 +105,7 @@ pre code {
 }
 
 pre {
-	white-space: pre-wrap;
+    white-space: pre-wrap;
     width: 96%;
     margin-bottom: 24px;
     overflow: hidden;
@@ -147,8 +116,8 @@ pre {
 }
 
 code {
-	white-space: nowrap;
-	font-family: monospace;
+    white-space: nowrap;
+    font-family: monospace;
     padding: 2px;
     -webkit-border-radius: 3px;
     background-color: #eee;
@@ -156,7 +125,7 @@ code {
 }
 
 small {
-	font-size: 65%;
+    font-size: 65%;
 }
 
 /**
@@ -166,12 +135,12 @@ small {
  */
 
 dt {
-	display: inline;
+    display: inline;
     font-weight:bold;
 }
 
 dd {
-	display: block;
+    display: block;
 }
 
 /**
@@ -340,13 +309,20 @@ figcaption {
     color: #777;
     margin: -40px auto;
 }
+
+/* --- master --- */
+/* +++ overrides +++ */
 #wrapper {
+    position: fixed;
     width: 99.9%;
 }
+
 #content {
     width: 610px;
     margin-left: auto;
     margin-right: auto;
+    padding-top:0;
+    padding-bottom:0;
 }
 
 /* Mobile support */
@@ -359,7 +335,10 @@ figcaption {
         overflow: auto;
         position: relative;
     }
-}/* html elements */
+}
+/* --- overrides --- */
+/* +++ theme +++ */
+/* html elements */
 
 body {
     background-color: #1a1a1a;
@@ -416,89 +395,17 @@ mark {
 
 .shadow {
     -webkit-box-shadow: 0 2px 4px #000;
-}@media print {
-/* Printing support.
- * Override all printing colors to match the Light theme.
- */
-img, pre, blockquote, table, figure {
-    page-break-inside: avoid;
 }
-body {
-    background-color:#fff;
-}
-#wrapper {
-    position: static;
-    overflow: hidden;
-    color: #000;
-    width: 100%;
-    margin: 0 auto;
-}
-.footnotes {
-    page-break-before: always;
-}
-#content {
-    margin: 0 auto;
-    padding: 0;
-    width: 98%;
-}
-#top-fader, #bottom-fader {
-    display: none;
-}
-hr {
-    color:#ddd;
-    background-color:#ddd;
-    -webkit-box-shadow:0px 1px 0px #ddd;
-}
-pre {
-    background-color:transparent;
-    border: 1px solid #ddd;
-}
-code {
-    background-color:transparent;
-    border: 1px solid #ddd;
-}
-blockquote {
-    border-left: 3px solid #ddd;
-    color: #000;
-}
-ol {
-    /*
-     * Override the list style when printing to ensure list
-     * markers won't get cut.
-     */
-    list-style-position: inside;
-    padding-left: 0;
-    margin-left: 0;
-}
-table {
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-}
-table th {
-    background-color:transparent;
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-}
-table td {
-    border-top: 1px solid #ddd;
-    border-left: 1px solid #ddd;
-}
-mark {
-    background:transparent;
-    color: #000;
-}
-.source {
-    color: #000;
-}
-}
+/* --- theme --- */
+
   </style>
 </head>
 <body>
   <div id="wrapper">
     <div id="content">
-<h1>Alex Tighe</h1>
+<h2>Alex Tighe</h2>
 
-<p><a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x61;&#x6c;&#101;&#x78;&#x74;&#x69;&#x67;&#104;&#101;&#64;&#105;&#99;&#108;&#111;&#117;&#x64;&#46;&#99;&#x6f;&#x6d;">&#x61;&#x6c;&#101;&#x78;&#x74;&#105;&#103;&#104;&#x65;&#64;&#x69;&#x63;&#x6c;&#111;&#x75;&#100;&#x2e;&#x63;&#111;&#x6d;</a> | 508.326.4871 | <a href="http://alextighe.me">http://alextighe.me</a></p>
+<p><a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x61;&#x6c;&#101;&#x78;&#x74;&#x69;&#x67;&#104;&#101;&#64;&#105;&#99;&#108;&#111;&#117;&#x64;&#46;&#99;&#x6f;&#x6d;">&#x61;&#x6c;&#101;&#x78;&#x74;&#105;&#103;&#104;&#x65;&#64;&#x69;&#x63;&#x6c;&#111;&#x75;&#100;&#x2e;&#x63;&#111;&#x6d;</a> | 508.326.4871 </p>
 
 <h3>Technologies</h3>
 
