--- a/resume.html
+++ b/resume.html
@@ -419,7 +419,7 @@ mark {
 
 <ul>
 <li>Consult on a variety of middle- and back-office applications for global investment banks</li>
-<li>Develop a scenario-based data calculator with a REST API in Java on top of Apache Spark</li>
+<li>Develop a scenario-based data calculator using Java and Apache Spark</li>
 <li>Design, implement, and deploy a real-time, rules-driven messaging system based on JMS, Drools, and MongoDB</li>
 <li>Maintain, expand, and improve RESTful web services, core storage and query functionality, test infrastructure, and data sources for a global, real-time position-keeping application using Java and Coherence, an in-memory distributed data grid</li>
 <li>Provide senior technical guidance for global project teams, participate in architectural discussions and decisions, and act as a key technical advisor</li>
