--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body {
 }
 
 #content {
-    width: 610px;
+    width: 850px;
     margin: 0 auto 0 auto;
     padding: 30px 0 30px 0;
 }
@@ -344,7 +344,7 @@ figcaption {
     width: 99.9%;
 }
 #content {
-    width: 610px;
+    width: 850px;
     margin-left: auto;
     margin-right: auto;
 }
@@ -443,7 +443,7 @@ mark {
 
 <p>I engineer software and listen to music and read. Here are my parts of the Internet: </p>
 
-<p><a href="https://twitter.com/ohyoucare">Twitter</a> | <a href="https://github.com/atighe">GitHub</a> | <a href="https://www.instagram.com/ohyoucare">Instagram</a> | <a href="https://www.linkedin.com/in/atighe">LinkedIn</a> | <a href="http://alextighe.me/resume">Resume</a></p>
+<p><a href="https://twitter.com/ohyoucare">Twitter</a> | <a href="https://github.com/atighe">GitHub</a> | <a href="https://www.instagram.com/ohyoucare">Instagram</a> | <a href="https://www.linkedin.com/in/atighe">LinkedIn</a> | <a href="http://alextighe.me/resume">Resume</a> | <a href="&#109;&#97;&#105;&#108;&#x74;&#111;&#x3a;&#x61;&#x6c;&#101;&#x78;&#x2e;&#x74;&#x69;&#103;&#104;&#101;&#64;&#103;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x45;&#x6d;&#97;&#x69;&#x6c;</a></p>
     </div>
   </div> <!-- End wrapper -->
 </body>
